toList method fix